# Pulse

./: .gitignore  GEMINI.md  LICENSE  README.md  diagnose_pulse.py  install.bat  install.sh  pulse.code-workspace  pyproject.toml  test_pulse_core.py  update_panels.py
.github/workflows/: ci.yml  publish.yml  releaser.yml
pulse/: __init__.py  __main__.py  core.py  themes.tcss
pulse/panels/: __init__.py  base.py  cpu.py  insight.py
pulse/screens/: help.py
pulse_core/: Cargo.toml  pyproject.toml
pulse_core/src/: lib.rs
src/pulse/: app.py  config.py  container_api.py  core.py  direct_os.py  state.py  themes.py  ui_utils.py
src/pulse/aether/: __init__.py  engine.py  renderer.py  shapes.py  terrain.py
src/pulse/panels/: cpu.py  disk.py  docker.py  insight.py  kernel.py  main_view.py  memory.py  network.py  process.py  storage.py  system.py
src/pulse/screens/: __init__.py  boot.py  help.py  immersive.py  viewer.py
src/pulse_core/: Cargo.toml
src/pulse_core/src/: lib.rs
tests/: test_config.py  test_core.py
