[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-monitor"
version = "0.1.0"
description = "A cinematic terminal-based system monitor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Pulse Team", email = "dev@pulse-monitor.io" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Environment :: Console",
]
keywords = ["terminal", "tui", "system-monitor", "telemetry", "cinematic"]
dependencies = [
    "textual>=2.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/Fatin-Ishraq/Pulse"
Repository = "https://github.com/Fatin-Ishraq/Pulse.git"

[project.scripts]
pulse = "pulse.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]
