[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-monitor"
version = "0.3.3"
description = "A cinematic terminal-based system monitor with Direct OS optimization"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Fatin Ishraq", email = "dev@pulse-monitor.io" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Environment :: Console",
]
keywords = ["terminal", "tui", "system-monitor", "telemetry", "cinematic"]
dependencies = [
    "textual>=2.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "docker>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/Fatin-Ishraq/Pulse"
Repository = "https://github.com/Fatin-Ishraq/Pulse.git"

[project.scripts]
pulse = "pulse.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]
